refactor spat-related objects